--- a/LaTeX/tarea.tex
+++ b/LaTeX/tarea.tex
@@ -122,6 +122,6 @@ table_values <- read.csv("./nba_stats.csv")
     Referencia: \url{https://fhernanb.github.io/libro_regresion/indep.html}
 
     \section{Conclusi\'on}
-    Es clara la relaci\'on entre los minutos jugados y los puntos anotados, pero seria una buena desici\'on incluir mas variables a este modelo en vez de solo dejarlo en dos, y como se dijo anteriormente podriamos quitar el intercepto de nuestra funci\'on de regresi\'on poblacional.
+    Es clara la relaci\'on entre los minutos jugados y los puntos anotados, pero seria una buena desici\'on incluir mas variables a este modelo en vez de solo dejarlo en dos, y como se dijo anteriormente podriamos quitar el intercepto de nuestra funci\'on de regresi\'on poblacional ya que al no jugar no se puede anotar una cantidad negativa de puntos.
 
 \end{document}
